<resources>
    <string name="app_name">TouchCounter</string>
    <string name="action_deleteAll">Delete All</string>
    <string name="action_exportAll">Export All</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="activity_measurement_name">New Measurement</string>
    <string name="activity_measurement_button_save">Save...</string>
    <string name="activity_measurement_button_cancel">Cancel</string>
    <string name="activity_measurement_button_measure">Tap to record timepoint</string>
    <string name="activity_measurement_text_numDataPointsCollected">Data points collected so far:</string>
    <string name="activity_measurement_text_avgBpm">Current average BPM:</string>
    <string name="activity_measurement_dialog_cancel_title">Discarding Measurement</string>
    <string name="activity_measurement_dialog_cancel_text">Are you sure that you want to cancel and forget this measurement?</string>
    <string name="activity_measurement_dialog_cancel_yes">Yes</string>
    <string name="activity_measurement_dialog_cancel_no">No</string>
    <string name="activity_measurement_dialog_save_title">Save Measurement</string>
    <string name="activity_measurement_dialog_save_text">Please enter a name for this measurement series:</string>
    <string name="activity_measurement_dialog_save_nameNotEmpty">The name can not be empty!</string>
    <string name="activity_measurement_dialog_save_pointsNotEmpty">There are no data points in this measurement!</string>
    <string name="activity_measurement_dialog_save_save">Save</string>
    <string name="activity_measurement_dialog_save_cancel">Cancel</string>
    <string name="activity_overview_menu_delete">Delete</string>
    <string name="activity_overview_menu_export">Export</string>
    <string name="activity_overview_menu_settings">Settings</string>
    <string name="activity_overview_dialog_delete_title">Deleting Measurement</string>
    <string name="activity_overview_dialog_delete_text">Are you sure that you want to delete the measurement \"PLACEHOLDER\"?</string>
    <string name="activity_overview_dialog_delete_yes">Yes</string>
    <string name="activity_overview_dialog_delete_no">No</string>
    <string name="activity_overview_dialog_deleteAll_title">Delete all Measurements</string>
    <string name="activity_overview_dialog_deleteAll_text">Are you sure that you want to delete ALL measurements?</string>
    <string name="activity_overview_dialog_deleteAll_yes">Yes</string>
    <string name="activity_overview_dialog_deleteAll_no">No</string>
    <string name="activity_overview_export_error">An error occurred while exporting the Series :(</string>
    <string name="activity_overview_export_success">Exported Series to file: </string>
    <string name="activity_overview_export_intent_title">Choose where to save</string>
    <string name="activity_settings_name">Settings</string>
    <string name="pref_cat_export">Export</string>
    <string name="pref_csvDelimiter_title">CSV Delimiter</string>
    <string name="pref_csvDelimiter_summary">Field Separator: %s</string>
    <string name="pref_csvDelimiter_default">Comma</string>
    <string name="pref_minDataPointDiff_title">Minimum time difference between successive data points</string>
    <string name="pref_minDataPointDiff_summary">Ignore data points closer than X ms.</string>
    <string name="pref_minDataPointDiff_default">50</string>
    <string name="pref_maxDataPointDiffPause_title">Maximum time difference between successive data points that triggers a pause</string>
    <string name="pref_maxDataPointDiffPause_summary">Restart BPM calculation after a pause of more than X ms.</string>
    <string name="pref_maxDataPointDiffPause_default">1500</string>
</resources>
